--- a/index.html
+++ b/index.html
@@ -1,9 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="cs">
+
 <head>
-    <title>Webovka</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Proč si vybrat Obchodní akademii jako střední školu</title>
 </head>
+
 <body>
-    <h1>1.D</h1>
+    <h1>Proč si vybrat Obchodní akademii</h1>
+
+    <h2>Je to fajn škola</h2>
+    <p style="font-size: 1.5em;">Fajn učitelé.</p>
+
+    <h2>Budete mít finanční gramotnost</h2>
+
+    <h2>Je v Opavě</h2>
+
+    <h3>Zdarma internet</h3>
+
+    <img src="https://i.imgflip.com/55dwno.png" alt="Meme obrázek - 55dwno">
 </body>
+
 </html>
