--- a/index.html
+++ b/index.html
@@ -1,62 +1,11 @@
 <!DOCTYPE html>
-<html lang="cs">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Moje škola</title>
-  <style>
-    /* NAVBAR */
-    #navbar {
-      background-color: #ededed;
-      display: flex;
-      justify-content: center; /* >>> vycentrování obsahu <<< */
-      align-items: center;
-      padding: 16px;
-      gap: 30px; /* mezera mezi "Naše škola" a menu */
-    }
-
-    #navbar a {
-      color: rgb(253, 0, 0); /* červené odkazy */
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    #navbar ul {
-      display: flex;
-      list-style: none;
-      margin: 0;
-      padding: 0;
-      gap: 10px;
-    }
-
-    #navbar ul li a {
-      padding: 10px 14px;
-      border-radius: 5px;
-      transition: background-color 0.3s, color 0.3s;
-    }
-
-    #navbar ul li a:hover {
-      background-color: #0037ff;
-      color: black;
-      border-radius: 50px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-  <div id="navbar">
-    <ul>
-      <li><a href="https://www.oa-opava.cz/">Škola</a/></li>
-      <li><a href="https://www.oa-opava.cz/index.php/skola/">O nás</a></li>
-      <li><a href="https://www.oa-opava.cz/index.php/kontakt">Kontakt na nás</a></li>
-    </ul>
-  </div>
-
-  <h1>Proč si vybrat Obchodní akademii</h1>
-  <h2>Je to fajn škola</h2>
-  <p style="font-size: 1.5em;">Fajn učitelé.</p>
-  <h2>Budete mít finanční gramotnost</h2>
-  <h2>Je v Opavě</h2>
-  <h3>Zdarma internet</h3>
-
-  <img src="https://i.imgflip.com/55dwno.png" alt="Meme obrázek - 55dwno">
+    
 </body>
 </html>
