--- a/prvni/index.html
+++ b/prvni/index.html
@@ -26,7 +26,7 @@
 
   <footer>
     <p>
-      <a href="https://validator.w3.org/nu/#file">Valid HTML</a> |
+      <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fhrbacadam.github.io%2Fprvni%2Findex.html">Valid HTML</a> |
       <a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a>
     </p>
   </footer>
