--- a/prvni/index.html
+++ b/prvni/index.html
@@ -24,11 +24,16 @@
 
   <img src="https://i.imgflip.com/55dwno.png" alt="Meme obrázek - 55dwno">
 
-  <footer>
-    <p>
-      <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fhrbacadam.github.io%2Fprvni%2Findex.html">Valid HTML</a> |
-      <a href="https://jigsaw.w3.org/css-validator/validator?uri=hrbacadam.github.io%2Fprvni%2Findex.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=cs">Valid CSS</a>
-    </p>
-  </footer>
-</body>
-</html>
+<footer>
+  <p>Ověřeno validátorem:</p>
+
+  <!-- HTML validátor -->
+  <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fhrbacadam.github.io%2Fprvni%2Findex.html" target="_blank">
+    <img src="https://www.w3.org/html/logo/badge/html5-badge-h-solo.png" alt="Valid HTML5" width="64" height="64">
+  </a>
+
+  <!-- CSS validátor -->
+  <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fhrbacadam.github.io%2Fprvni%2Findex.html&amp;profile=css3svg&amp;usermedium=all&amp;warning=1&amp;vextwarning=&amp;lang=cs" target="_blank">
+    <img src="9cd5eb05-3d91-480b-95dc-90fd7bc165f8.png" alt="Valid CSS" width="64" height="130">
+  </a>
+</footer>
