--- a/prvni/index.html
+++ b/prvni/index.html
@@ -1,39 +1,48 @@
 <!DOCTYPE html>
-<html lang="cs">
+<html lang="cs" dir="ltr">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Moje škola</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-  <div id="navbar">
+  <!-- Horní informační lišta -->
+  <div id="topbar">
+    <p>Projekt vytvořil Adam Hrbáč</p>
+  </div>
+
+  <!-- Navigace -->
+  <nav id="navbar">
     <ul>
       <li><a href="https://www.oa-opava.cz/">Škola</a></li>
       <li><a href="https://www.oa-opava.cz/index.php/skola/">O nás</a></li>
       <li><a href="https://www.oa-opava.cz/index.php/kontakt">Kontakt na nás</a></li>
     </ul>
-  </div>
+  </nav>
 
-  <h1>Proč si vybrat Obchodní akademii</h1>
-  <h2>Je to fajn škola</h2>
-  <p class="big">Fajn učitelé.</p>
-  <h2>Budete mít finanční gramotnost</h2>
-  <h2>Je v Opavě</h2>
-  <h3>Zdarma internet</h3>
+  <!-- Hlavní obsah -->
+  <main>
+    <h1>Proč si vybrat Obchodní akademii</h1>
+    <h2>Je to fajn škola</h2>
+    <p class="big">Fajn učitelé.</p>
+    <h2>Budete mít finanční gramotnost</h2>
+    <h2>Je v Opavě</h2>
+    <h3>Zdarma internet</h3>
 
-  <img src="https://i.imgflip.com/55dwno.png" alt="Meme obrázek - 55dwno">
+    <img src="https://i.imgflip.com/55dwno.png" alt="Vtipný meme obrázek o škole">
+  </main>
 
-<footer>
-  <p>Ověřeno validátorem:</p>
-
-  <!-- HTML validátor -->
-  <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fhrbacadam.github.io%2Fprvni%2Findex.html" target="_blank">
-    <img src="https://www.w3.org/html/logo/badge/html5-badge-h-solo.png" alt="Valid HTML5" width="64" height="64">
-  </a>
-
-  <!-- CSS validátor -->
-  <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fhrbacadam.github.io%2Fprvni%2Findex.html&amp;profile=css3svg&amp;usermedium=all&amp;warning=1&amp;vextwarning=&amp;lang=cs" target="_blank">
-    <img src="9cd5eb05-3d91-480b-95dc-90fd7bc165f8.png" alt="Valid CSS" width="64" height="130">
-  </a>
-</footer>
+  <!-- Patička -->
+  <footer>
+    <p>Ověřeno validátorem:</p>
+    <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fhrbacadam.github.io%2Fprvni%2Findex.html" target="_blank">
+      <img src="https://www.w3.org/html/logo/badge/html5-badge-h-solo.png" alt="Valid HTML5" width="64" height="64">
+    </a>
+    <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fhrbacadam.github.io%2Fprvni%2Findex.html&amp;profile=css3svg&amp;usermedium=all&amp;warning=1&amp;vextwarning=&amp;lang=cs" target="_blank">
+      <img src="9cd5eb05-3d91-480b-95dc-90fd7bc165f8.png" alt="Valid CSS" width="64" height="130">
+    </a>
+  </footer>
+</body>
+</html>
