--- a/prvni/index.html
+++ b/prvni/index.html
@@ -40,8 +40,11 @@
     <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fhrbacadam.github.io%2Fprvni%2Findex.html" target="_blank">
       <img src="https://www.w3.org/html/logo/badge/html5-badge-h-solo.png" alt="Valid HTML5" width="64" height="64">
     </a>
-    <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fhrbacadam.github.io%2Fprvni%2Findex.html&amp;profile=css3svg&amp;usermedium=all&amp;warning=1&amp;vextwarning=&amp;lang=cs" target="_blank">
-      <img src="9cd5eb05-3d91-480b-95dc-90fd7bc165f8.png" alt="Valid CSS" width="64" height="130">
+    <p>
+    <a href="https://jigsaw.w3.org/css-validator/check/referer">
+        <img style="border:0;width:88px;height:31px"
+            src="https://jigsaw.w3.org/css-validator/images/vcss"
+            alt="Ověřit CSS!" />
     </a>
   </footer>
 </body>
