--- a/prvni/index.html
+++ b/prvni/index.html
@@ -41,7 +41,7 @@
       <img src="https://www.w3.org/html/logo/badge/html5-badge-h-solo.png" alt="Valid HTML5" width="64" height="64">
     </a>
     <p>
-    <a href="https://jigsaw.w3.org/css-validator/check/referer">
+    <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fhrbacadam.github.io%2Fprvni%2Findex.html">
         <img style="border:0;width:88px;height:31px"
             src="https://jigsaw.w3.org/css-validator/images/vcss"
             alt="Ověřit CSS!" />
